Changes between 1.3.0 and 1.3.1
==================================================

- fix issue96: make capturing more resilient against Control-C 
  interruptions (involved somewhat substantial refactoring
  to the underlying capturing functionality to avoid race 
  conditions).

- make py.test.cmdline.main() return the exitstatus 
  instead of raising (which is still done by py.cmdline.pytest())
  and make it so that py.test.cmdline.main() can be called
  multiple times, at least as far as py.test's internal 
  state is concerned - previously it would raise an exception
  on the second time. 

- improve tracebacks presentation: 
  - raises shows shorter more relevant tracebacks

- improve support for raises and other dynamically compiled code by
  manipulating python's linecache.cache instead of the previous
  rather hacky way of creating custom code objects.  This makes 
  it seemlessly work on Jython and PyPy at least. 

Changes between 1.2.1 and 1.3.0
==================================================

- deprecate --report option in favour of a new shorter and easier to
  remember -r option: it takes a string argument consisting of any
  combination of 'xfsX' characters.  They relate to the single chars
  you see during the dotted progress printing and will print an extra line 
  per test at the end of the test run.  This extra line indicates the exact
  position or test ID that you directly paste to the py.test cmdline in order
  to re-run a particular test. 

- allow external plugins to register new hooks via the new 
  pytest_addhooks(pluginmanager) hook.  The new release of
  the pytest-xdist plugin for distributed and looponfailing 
  testing requires this feature. 

- add a new pytest_ignore_collect(path, config) hook to allow projects and
  plugins to define exclusion behaviour for their directory structure - 
  for example you may define in a conftest.py this method::

        def pytest_ignore_collect(path):
            return path.check(link=1)
